tests/NormalTests/paczka1/small_fuzzy/72489343.err
Error in line 6: S617 S458 22,4
Error in line 10: S617 S617 29,8
Error in line 4: 12uFgwS9bc S756 95,1
